# pmt

./: docker-compose.yml
backend/: AGENTS.md  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py  service.py
backend/tests/: test_api.py
docs/: DATABASE_DESIGN.md  LOCAL_DEVELOPMENT.md  PLAN.md
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx
frontend/src/lib/: boardApi.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
